--- a/commands/install
+++ b/commands/install
@@ -5,21 +5,26 @@
 SCRIPT_PATH="$( cd -- "$(dirname "$0")" >/dev/null 2>&1 ; pwd -P )"
 cd "${SCRIPT_PATH}" && cd ..
 
-#########################
-# Create ENV files from example files
-#########################
+######################################
+#
+# Step 1: Add configuration files (Docker and Laravel)
+#
+######################################
 
 DOCKER_ENV_FILE_EXAMPLE=./.env.example
 DOCKER_ENV_FILE=./.env
+
 LARAVEL_ENV_FILE_EXAMPLE=./laravel/.env.example
 LARAVEL_ENV_FILE=./laravel/.env
 
 cp $DOCKER_ENV_FILE_EXAMPLE $DOCKER_ENV_FILE
 cp $LARAVEL_ENV_FILE_EXAMPLE $LARAVEL_ENV_FILE
 
-#########################
-# Prepare shared folders
-#########################
+######################################
+#
+# Step 2: Prepare shared folders
+#
+######################################
 
 # Create synced docker volumes
 mkdir -p docker/volumes/mysql
